Fixed alignment of filter items

--- a/react/src/components/header/FiltersModal.css
+++ b/react/src/components/header/FiltersModal.css
@@ -1,4 +1,9 @@
-
 .filters-usernames-div {
-	columns: 5;
+  columns: 5;
+  column-width: 1fr;
+}
+
+.oneLine {
+  overflow: hidden;
+  white-space: nowrap;
 }
